contact.html and edit.html partial changed.
Some bugs fixed. Contact information added.

--- a/views/contact.html
+++ b/views/contact.html
@@ -1,2 +1,6 @@
-<h1> Hy my name is Nazar!</h1> 
-<p>How are you,{{name}}?</p>
+<h1>Nazar Chuba
+</h1> 
+<p class="contacts">+38096-375-74-65<br>
+nazarmsx@gmail.com<br>
+<a href="https://github.com/nazarmsx">GitHub</a></p>
+
