--- a/views/edit.html
+++ b/views/edit.html
@@ -32,8 +32,8 @@
     </tbody>
 </table>
 <ul class="pager" >
-    <button  class="btn" style="float: right;" type="button"  ng-click="previous()">Previous</button>
-   <button class="btn"  style="float: left;" type="button"  ng-disabled="nextButtonDisable" ng-click="next()">Next</button>
+    <button  class="btn" style="float: left;" type="button"  ng-click="previous()">Previous</button>
+   <button class="btn"  style="float: right;" type="button"  ng-disabled="nextButtonDisable" ng-click="next()">Next</button>
 </ul>
 </div>
 </div>
