--- a/views/edit.html
+++ b/views/edit.html
@@ -19,7 +19,7 @@
             <td>{{ post.created}}</td>
            
             <td>
-                <button class="btn" ng-click="editPost(post.id)">
+                <button class="btn" ng-click="editPost(post.id,post.title,post.post_text)">
                     <span class="glyphicon glyphicon-pencil"></span>  Edit
                 </button>
             </td>
@@ -39,23 +39,23 @@
 </div>
  </div>
 
-<div class="overlay-bg">
+<div class="overlay-bg" ng-hide="hideForm">
 </div>
-<div class="overlay-content popup1" ng-hide="false">
+<div class="overlay-content popup1" ng-hide="hideForm">
     <form  class="form-horizontal" name="myForm" novalidate>
     <div class="form-group">
         <label class="col-sm-2 control-label">Post title:</label>
         <div class="col-sm-6">
-            <input type="text" name="user_name" ng-model="customer.name"  class="form-control" placeholder="Name" ng-required="true" required>
+            <input type="text" name="post_title" ng-model="post.post_title"  class="form-control" placeholder="Title" ng-required="true" required>
             <span style="color:red" ng-show="myForm.user_name.$dirty && myForm.user_name.$invalid">
                 <span ng-show="myForm.user_name.$error.required">Name is required.</span>               
             </span>
         </div>
     </div>
     <div class="form-group">
-        <label class="col-sm-2 control-label">Email:</label>
-        <div class="col-sm-3">
-            <input type="email" name="email" ng-model="customer.email" id="inputEmail" class="form-control" placeholder="Email address" required>
+        <label class="col-sm-2 control-label">Post text:</label>
+        <div class="col-sm-6">
+            <textarea class="form-control" rows="10" cols="14" name="post_title" ng-model="post.post_text" id="inputEmail" class="form-control" placeholder="Post text" required></textarea>
             <span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
                 <span ng-show="myForm.email.$error.required">Email is required.</span>
                 <span ng-show="myForm.email.$error.email">Invalid email address.</span>
@@ -63,45 +63,7 @@
         </div>
     </div>
 
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Telephone:</label>
-        <div class="col-sm-3">
-            <input type="text" ng-model="customer.telephone" name="telephone" class="form-control" placeholder="Telephone" ng-maxlength="10" ng-minlength="10" ng-pattern="/^\d{10}$/">
-       
-       <span style="color:red" ng-show="myForm.telephone.$dirty && myForm.telephone.$invalid">The phone number field should be of 10 digits</span>
-       </div>
-    </div>
-    <div class="form-group">
-        <label class="col-sm-2 control-label">State:</label>
-        <div class="col-sm-3">
-            <input type="text" ng-model="customer.state" class="form-control" placeholder="State">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="col-sm-2 control-label">City:</label>
-        <div class="col-sm-3">
-            <input type="text" ng-model="customer.city" class="form-control" placeholder="City">
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Street:</label>
-        <div class="col-sm-3">
-            <input type="text" name="name" ng-model="customer.street"  class="form-control" placeholder="Street name" >
-
-        </div>
-    </div>
-
-
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Postal code:</label>
-        <div class="col-sm-3">
-            <input type="text" name="zip" ng-model="customer.zip"  class="form-control" placeholder="Postal code" >
-            <span style="color:red" ng-show="myForm.zip.$dirty">
-                <span ng-show="myForm.zip.$error.required">Name is required.</span>               
-            </span>
-        </div>
-    </div>
+  
 </form>
 <hr>
 <div class="form-actions">
@@ -110,6 +72,4 @@
     <button class="btn btn-success" ng-show="edit" ng-click="createUser()" ng-disabled="myForm.$pristine || myForm.$invalid" > 
         <span class="glyphicon glyphicon-user"></span>  Create New User
     </button>
-</div>
-    <button class="close-btn" ng-click="closeForm()">Close</button>
-</div>
+    <button class="btn btn-danger" ng-click="closeForm()">Cancel</button>
