--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,10 @@
  <div class="container col-xs-8 col-xs-offset-2" >  
+  <div class="spinner" ng-show="postsAreBeingDownloading">
+  <div class="bounce1"></div>
+  <div class="bounce2"></div>
+  <div class="bounce3"></div>
+</div>
+    
 <div ng-repeat="post in posts" >
        
        <div class="row">
@@ -9,18 +15,29 @@
         <ul class="list-inline">
             <li><span id="postDate">{{post.created }}</span></li><li></li><li>
                 </li>
-                <li ng-click="loadComments(post)"><i class="glyphicon glyphicon-comment"></i> <a href="" ng-hide="post.commentsQuantity==0"> {{post.commentsQuantity}} comments</a>
-                <a href="" ng-show="post.commentsQuantity==0"> No comments have been added yet :(</a></li>
+                <li ><i class="glyphicon glyphicon-comment"></i> <a href="" ng-click="loadComments(post)" class="btn btn-default" ng-hide="post.commentsQuantity==0"> {{post.commentsQuantity}} comments</a>
+                    <span ng-show="post.commentsQuantity==0"> No comments have been added yet :(</span></li>
         </ul>
       </div>
-           <div id="comments" ng-repeat="comment in post.comments">
-             {{comment.text}}  
+           <div class="container">
+               
+  
+           </div>
+           <div class="container">
+  <div class="dialogbox" ng-repeat="comment in post.comments">
+    <div class="body">
+      <span class="tip tip-up"></span>
+      <div class="message" >
+        <span>{{comment.text}}</span>
+      </div>
+    </div>
+  </div>
            </div>
     </div>
     <hr>  
 </div>
      <a class="btn btn-info btn-block btn-primary" ng-hide="allPostDownloaded" ng-click="loadMore()" role="button">Load More </a>
-    <div class="alert alert-info" role="alert" ng-show="allPostDownloaded"><strong>Info!</strong>There is no post to download.</div>
+    <div class="alert alert-info" role="alert" ng-show="allPostDownloaded && (!postsAreBeingDownloading)"><strong>Info!</strong>There is no post to download.</div>
 </div>
 
 
