Some functionality added.

--- a/views/edit.html
+++ b/views/edit.html
@@ -1,4 +1,9 @@
- <div class="container col-xs-8 col-xs-offset-2" >   
+ <div class="container col-xs-8 col-xs-offset-2" >  
+     <div class="spinner" ng-show="downloading">
+  <div class="bounce1"></div>
+  <div class="bounce2"></div>
+  <div class="bounce3"></div>
+</div>
 <div class="row">
 <div class="panel panel-default">
 <div class="panel-heading"><h3>Posts</h3></div>
