--- a/views/post.html
+++ b/views/post.html
@@ -1,11 +1,17 @@
  <div class="container col-xs-8 col-xs-offset-2" >   
 <div class="row">
       <div class="col-xs-12">
-        <h2>{{title}}</h2>
+        <h2>{{title}}{{id}}</h2>
         <p>{{post_text }}</p>
         <ul class="list-inline">
             <li><span id="postDate">{{created }}</span></li><li></li><li>
                 </li></ul>
       </div>
     </div>
+     <div class="row"><div class="col-xs-12">
+             <div class="comments">
+                 <spb-comments postid="id" ng-if="postWasLoaded">
+                     
+                 </spb-comments>
+</div></div> </div>
  </div>
